[package]
name = "eth_event_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "17.0.0"
clap = "2.33"
csv = "1.1"
serde = {version="1.0.159", features = ["derive"]}
hex = "0.4.3"
serde_json = "1.0.105"
reqwest = {version = "0.11.20", features=["json"]}
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"